- Fix ammo selector issue
IMPROVEMENTS
- General:
	- Add the script for evaluating the score weights and the old dmg_analysis (for .50cal, 20mm and 30mm ammo) to '_Other Stuff'.
	- Remove executable status of the vessel-trace plotting script.
	- Add Waterfall config for the Saturn engine.
- AI:
	- Tweaks to VacuumAI terrain avoidance.
	- Add the off-by-one frame fix to ramming and missile guidance.
- Weapons:
	- Move finalFire checks into a single function that runs in AimAndFire during the FashionablyLate timing phase instead of being spread between Update and FixedUpdate.
	- Add check to AI when using a weapons group to grab the lead offset from a weapon that can fire (has ammo/not reloading/overheated/pointing at self), not merely the first weapon found.
	- Reduce spin up times for Vulcan/Gaus.
	- Fix shrapnel radius of missiles/bombs/shells using standard warheads.
	- Add support for multiple laserbeamFX textures.
	- Add DeployableRail module for missilebays.
	- Explosions from impact-fuzed HE bullets/rockets that penetrate armor no longer have to still bypass armor in explosion calcs (phrasing needs work - explosion from penetrating HE rounds now properly bypass armor in explosion calcs, old way the penetrating HE round still did standard explosion pipeline which included a check to see if the explosion got through hit part's armor).
	- Missile Selection priority. FIXME Can you elaborate  a little SI?
- Armor:
	- Add additional check to ArmorTool, can no longer make engines out of wood.
	- Proc Armor panels no longer clamped to 0.5m increments.
	- Fixes proc armor panels slightly shifting attached parts on load.
- Tournamements:
	- Add some timestamp and duration output to the tournament summary.
	- Include damage taken in the console output of the parsing script.
	- Adjust spacing in output from parsing script.
	- Add an optional title to the summary plots.
	- Add debug statement about which savegame is loaded with auto-resume functionality.