@@ -130,6 +130,8 @@ Localization
         #LOC_BDArmory_Settings_AutoResumeTournaments = Auto-Resume Tournaments
         #LOC_BDArmory_Settings_AutoQuitMemoryUsage = Auto-Quit Memory Threshold
         #LOC_BDArmory_Settings_CurrentMemoryUsageEstimate = Current Memory Usage Estimate
+        #LOC_BDArmory_Settings_TimeOverride = Time Override
+        #LOC_BDArmory_Settings_TimeScale = Time Scale
         #LOC_BDArmory_Settings_legacyArmor = Enable Legacy Armor
         #LOC_BDArmory_Settings_AdvancedUserSettings = Advanced User Settings
         #LOC_BDArmory_Settings_DamageMultiplier = Damage Multiplier
