@@ -2397,6 +2397,25 @@ namespace BDArmory.UI
                             GUI.Label(SLineRect(++line, 1), $"{Localizer.Format("#LOC_BDArmory_Settings_CurrentMemoryUsageEstimate")}: {TournamentAutoResume.memoryUsage:F1}GB / {SystemMaxMemory}GB", leftLabel);
                         }
                     }
+                    if (BDArmorySettings.TIME_OVERRIDE != (BDArmorySettings.TIME_OVERRIDE = GUI.Toggle(SLeftRect(++line), BDArmorySettings.TIME_OVERRIDE, Localizer.Format("#LOC_BDArmory_Settings_TimeOverride")))) // Time override.
+                    {
+                        if (!BDArmorySettings.TIME_OVERRIDE)
+                        {
+                            Time.timeScale = 1f; // Reset the time scale
+                        }
+                        else
+                        {
+                            Time.timeScale = BDArmorySettings.TIME_SCALE; // Set the time scale to our setting.
+                        }
+                    }
+                    if (BDArmorySettings.TIME_OVERRIDE)
+                    {
+                        GUI.Label(SLeftSliderRect(++line, 1), $"{Localizer.Format("#LOC_BDArmory_Settings_TimeScale")}; ({BDArmorySettings.TIME_SCALE:G2}x)", leftLabel);
+                        if (BDArmorySettings.TIME_SCALE != (BDArmorySettings.TIME_SCALE = Mathf.Round(GUI.HorizontalSlider(SRightSliderRect(line), BDArmorySettings.TIME_SCALE, 0f, 5f) * 10f) / 10f))
+                        {
+                            Time.timeScale = BDArmorySettings.TIME_SCALE;
+                        }
+                    }
                 }
 
                 line += 0.5f;
@@ -2482,7 +2501,7 @@ namespace BDArmory.UI
                 BDArmorySettings.INFINITE_AMMO = GUI.Toggle(SRightRect(line), BDArmorySettings.INFINITE_AMMO, Localizer.Format("#LOC_BDArmory_Settings_InfiniteAmmo"));//"Infinite Ammo"
                 BDArmorySettings.TAG_MODE = GUI.Toggle(SLeftRect(++line), BDArmorySettings.TAG_MODE, Localizer.Format("#LOC_BDArmory_Settings_TagMode"));//"Tag Mode"
                 if (BDArmorySettings.PAINTBALL_MODE != (BDArmorySettings.PAINTBALL_MODE = GUI.Toggle(SRightRect(line), BDArmorySettings.PAINTBALL_MODE, Localizer.Format("#LOC_BDArmory_Settings_PaintballMode"))))//"Paintball Mode"
-                { 
+                {
                     BulletHitFX.SetupShellPool();
                     BDArmorySettings.BATTLEDAMAGE = false;
                 }
@@ -2658,7 +2677,7 @@ namespace BDArmory.UI
                         BDArmorySettings.SF_GRAVITY = false;
                         BDArmorySettings.SF_REPULSOR = false;
                     }
-                }                
+                }
                 // Asteroids
                 if (BDArmorySettings.ASTEROID_FIELD != (BDArmorySettings.ASTEROID_FIELD = GUI.Toggle(SLeftRect(++line), BDArmorySettings.ASTEROID_FIELD, Localizer.Format("#LOC_BDArmory_Settings_AsteroidField")))) // Asteroid Field
                 {
